some notes to simplification

--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -1,10 +1,11 @@
-When visualizing the ligand trajectory as is, e.g., using line strip of consecutive ligand positions, the visualization becomes crowded even when analyzing only hundreds of snapshots (see Figure \textcolor{red}{???}).
-Therefore, we decided to simplify the original trajectory data and to visualize the simplified trajectory.
-In this manner, we enable the user to deduce information about ligand movement directly from 3D visualization.
+Visualization of ligand movement in 3D space can provide useful information to the biochemists.
+However, when displaying the ligand trajectory as is, e.g., using line strip of consecutive ligand positions, the visualization becomes crowded even when analyzing only hundreds of snapshots (see Figure \textcolor{red}{???}).
+Therefore, we decided to provide an option to simplify the original trajectory data and to visualize the simplified trajectory.
+In this manner, we enable the users to deduce the information about ligand movement directly from 3D visualization.
 
-Our tool enables for two types of ligand trajectory simplification: i) automatic and ii) manual.
-The automatic simplification is supposed to be applied to whole original trajectory, while the manual one enables users to fine control the level of simplification of parts of the trajectory that are of their interest.
-In fact, the automatic simplification can be viewed as an iterative application of the manual simplification, since its design was aligned with the workflow of a biochemist.
+Our tool enables two types of ligand trajectory simplification: i) automatic and ii) manual.
+The automatic simplification is applied to the whole original trajectory, while the manual one enables fine control over the level of simplification of parts of the trajectory that are of their interest.
+In fact, the automatic simplification can be viewed as an iterative application of the manual simplification\textcolor[rgb]{1,0,0}{, since its design was aligned with the workflow of a biochemist.}
 
 \begin{algorithm}
   \begin{algorithmic}[1]
@@ -35,14 +36,15 @@ In fact, the automatic simplification can be viewed as an iterative application 
 \end{algorithm}
 
 First, we will describe the algorithm of the manual trajectory simplification (see Algorithm~\ref{alg:simplify}).
-The inputs of the algorithm are: a trajectory ($T_{in}$) and a data structure describing the simplification ($S$).
+The input of the algorithm consist of a trajectory ($T_{in}$) and a data structure describing the simplification ($S$). \textcolor[rgb]{1,0,0}{What about interval we update -- that should also be an input.}
 More precisely, $S$ is a list of consecutive intervals that span the whole trajectory.
 Each interval in $S$ is assigned with a simplification level and as such describes amount of simplification of a respective part of $T_{in}$.
 Such representation of $S$ was chosen in order to enable simplification of different parts of $T_{in}$ using different simplification levels.
 In the beginning, the algorithm retrieves from a cache the current visualized trajectory ($T'$) together with its simplification ($S'$).
-Then, it is decided whether $T'$ can be incrementally updated to obtain $T_{out}$.
-If so, an interval $\Delta I$ which updates $S'$ to $S$ is obtained and the current visualized trajectory $T'$ is simplified on $\Delta I$ resulting in $T_{out}$.
-Otherwise, the current visualized trajectory $T'$ cannot be employed and the simplified trajectory has to be computed from scratch using $T_{in}$.
+Then, it is decided whether $T'$ can be incrementally updated to obtain $T_{out}$. \TODO{How is the decision made? is the following correct?}
+%If so, an interval $\Delta I$ which updates $S'$ to $S$ is obtained and the current visualized trajectory $T'$ is simplified on $\Delta I$ resulting in $T_{out}$.
+If if the level of simplification of $T'$ at the updated interval $\Delta I$ is lower than the desired level of simplification, the current visualized trajectory $T'$ is simplified on $\Delta I$ resulting in $T_{out}$.
+Otherwise, the visualized trajectory $T'$ cannot be employed and the simplified trajectory has to be computed from scratch using $T_{in}$.
 For example, this case emerges when a user decides to lower the amount of simplification of some part of the trajectory.
 In such case, the computation proceeds as follows.
 A set $\mathcal{L}$ containing sets of intervals with same simplification level is computed.
