Modified complexity figure

--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -125,7 +125,7 @@ Our typical setting for $\nu$ is 2 \angstrom\, an experimentally obtained value.
 \begin{figure}
 	\includegraphics[width=0.95\linewidth]{img/complexity.pdf}
 \caption{Evaluation of complexity of a trajectory $T$ in point $x$.
-The complexity $c(x)$ is contributed to by tuples $(u, v)$, \ie their angles ($\alpha$), and $(v, w)$ as the segments $u$, $v$ and $w$ lie in the neighborhood of $x$ (red).
+The complexity $c(x)$ is contributed to by tuples $(u, v)$ and $(v, w)$, \ie their angles $\alpha$ and $\beta$, as the segments $u$, $v$ and $w$ lie in the neighborhood of $x$ (red).
 The neighborhood of $x$ contains all points that are closer (along $T$) to $x$ then $\nu$.}
 \label{fig:complexity}
 \end{figure}
