edit - misunderstood part

--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -110,7 +110,7 @@ Moreover, the performance of manual simplification is also enhanced, for example
 
 The automatic algorithm (see Algorithm~\ref{alg:auto-simplify}) is iterative and it employs the manual simplification in its iterations.
 Furthermore, it is based on an idea to simplify only parts of the trajectory that are still complex.
-The algorithm starts with considering the whole trajectory as complex -- the set of complex intervals $C$ is filled with all intervals of $T_{in}$.
+The algorithm starts with considering the whole trajectory as complex -- the set of complex intervals $C$ is set to the interval spanning $T_{in}$.
 Then, the complexity ($c$) of $T_{in}$ is evaluated in all points of $T_{in}$.
 The complexity $c(x)$ in point $x$ is defined as (see Figure~\ref{fig:complexity}):
 \begin{equation}
