--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -121,7 +121,7 @@ The complexity $c(x)$ in point $x$ is defined as (see Figure~\ref{fig:complexity
 where $N(T, x, \nu)$ is a set of consecutive tuples of segments of a trajectory $T$ lying in the neighborhood of $x$ and $\alpha(u, v)$ is angle between segments $u$ and $v$.
 The neighborhood of $x$ contains all points $y \in T$ such that $d(x, y) < \nu$ where $d(x, y)$ is distance along $T$.
 We evaluate the complexity of $T$ in a neighborhood of $x$ in order to take into account local shape of the trajectory in the vicinity of $x$.
-Our typical setting for $\nu$ is 2 \angstrom\, an experimentally obtained value.
+Our typical setting for $\nu$ is 2~\angstrom\ which is an experimentally obtained value.
 
 \begin{figure}
 	\includegraphics[width=0.95\linewidth]{img/complexity.pdf}
