--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -15,36 +15,6 @@ We propose two types of ligand trajectory simplification: i) automatic and ii) m
 The automatic simplification is applied to the whole original trajectory, while the manual one enables fine user regulated control over the level of simplification of individual parts of the trajectory.
 In fact, the automatic simplification can be viewed as an iterative application of the manual simplification.
 %, since its design was aligned with the workflow of a biochemist. - dala by som prec, postradam logicku navaznost
-
-\begin{algorithm}
-  \begin{algorithmic}[1]
-	  \Require $T_{in}$ --- trajectory, $I$ --- simplification interval
-	  \Ensure $T_{out}$ --- simplified trajectory
-		\Procedure{Simplify}{$T_{in}, I$}
-			\State $(T', S') \gets$ \Call{CacheLoad}{$ $} \Comment{$S'$ --- previous simplification}
-			\State $S \gets$ \Call{Update}{$S', I$}
-			\State
-			\If{\Call{IsIncremental}{$S, S'$}}
-			  %\State $\Delta I \gets$ \Call{Diff}{$S, S'$}
-				\State $T_{out} \gets$ \Call{SavitzkyGolay}{$T', I$}
-			\Else %\Comment{compute from scratch}
-			  \State $\mathcal{L} \gets$ \Call{ByLevels}{$S$} \Comment{$\mathcal{L}$ --- sets of complex intervals}
-				\State $T_{out} \gets T_{in}$
-				\ForAll{$L \in \mathcal{L}$} \Comment{in asc. order by $level(L)$}
-				  \ForAll{$I_L \in L$}
-					  \State $T_{out} \gets$ \Call{SavitzkyGolay}{$T_{out}, I_L$}
-					\EndFor
-				\EndFor
-			\EndIf
-			\State
-			\State \Call{CacheSave}{$T_{out}, S$}
-			\State \Return $T_{out}$
-		\EndProcedure
-  \end{algorithmic}
-	\caption{Trajectory simplification}
-  \label{alg:simplify}
-\end{algorithm}
-
 \subsubsection*{Manual Simplification}
 
 First, we will describe the algorithm of the manual trajectory simplification (see Algorithm~\ref{alg:simplify}).
@@ -77,6 +47,51 @@ Moreover, the performance of manual simplification is also enhanced, for example
 
 \begin{algorithm}
   \begin{algorithmic}[1]
+	  \Require $T_{in}$ --- trajectory, $I$ --- simplification interval
+	  \Ensure $T_{out}$ --- simplified trajectory
+		\Procedure{Simplify}{$T_{in}, I$}
+			\State $(T', S') \gets$ \Call{CacheLoad}{$ $} \Comment{$S'$ --- previous simplification}
+			\State $S \gets$ \Call{Update}{$S', I$}
+			\State
+			\If{\Call{IsIncremental}{$S, S'$}}
+			  %\State $\Delta I \gets$ \Call{Diff}{$S, S'$}
+				\State $T_{out} \gets$ \Call{SavitzkyGolay}{$T', I$}
+			\Else %\Comment{compute from scratch}
+			  \State $\mathcal{L} \gets$ \Call{ByLevels}{$S$} \Comment{$\mathcal{L}$ --- sets of complex intervals}
+				\State $T_{out} \gets T_{in}$
+				\ForAll{$L \in \mathcal{L}$} \Comment{in asc. order by $level(L)$}
+				  \ForAll{$I_L \in L$}
+					  \State $T_{out} \gets$ \Call{SavitzkyGolay}{$T_{out}, I_L$}
+					\EndFor
+				\EndFor
+			\EndIf
+			\State
+			\State \Call{CacheSave}{$T_{out}, S$}
+			\State \Return $T_{out}$
+		\EndProcedure
+  \end{algorithmic}
+	\caption{Trajectory simplification}
+  \label{alg:simplify}
+\end{algorithm}
+
+\subsubsection*{Automatic Simplification}
+
+The automatic algorithm (see Algorithm~\ref{alg:auto-simplify}) is iterative and it employs the manual simplification in its iterations.
+Furthermore, it is based on an idea to simplify only parts of the trajectory that are still complex.
+The algorithm starts with considering the whole trajectory as complex -- the set of complex intervals $C$ is set to the interval spanning $T_{in}$.
+Then, the complexity ($c$) of $T_{in}$ is evaluated in all points of $T_{in}$.
+The complexity $c(x)$ in point $x$ is defined as (see Figure~\ref{fig:complexity}):
+\begin{equation}
+  c(x) = \sum_{(u, v) \in N(T, x, \nu)}{(|u| + |v|)^2 \alpha(u, v)}, % \mathrm{acos}(\frac{u \cdot v}{|u| \cdot |v|})
+\label{eq:complexity}
+\end{equation}
+where $N(T, x, \nu)$ is a set of consecutive tuples of segments of a trajectory $T$ lying in the neighborhood of $x$ and $\alpha(u, v)$ is angle between segments $u$ and $v$.
+The neighborhood of $x$ contains all points $y \in T$ such that $d(x, y) < \nu$ where $d(x, y)$ is distance along $T$.
+We evaluate the complexity of $T$ in a neighborhood of $x$ in order to take into account local shape of the trajectory in the vicinity of $x$.
+Our typical setting for $\nu$ is 2~\angstrom\ which is an experimentally obtained value.
+
+\begin{algorithm} [htb]
+  \begin{algorithmic}[1]
 	  \Require $T_{in}$ --- trajectory, $\nu$ --- complexity neighborhood, $\tau$ --- complexity threshold, $\epsilon$ --- improvement threshold
 	  \Ensure $T_{out}$ --- simplified trajectory
 		\Procedure{AutoSimplify}{$T_{in}, \nu, \tau, \epsilon$}
@@ -106,22 +121,6 @@ Moreover, the performance of manual simplification is also enhanced, for example
 	\caption{Automatic trajectory simplification}
   \label{alg:auto-simplify}
 \end{algorithm}
-
-\subsubsection*{Automatic Simplification}
-
-The automatic algorithm (see Algorithm~\ref{alg:auto-simplify}) is iterative and it employs the manual simplification in its iterations.
-Furthermore, it is based on an idea to simplify only parts of the trajectory that are still complex.
-The algorithm starts with considering the whole trajectory as complex -- the set of complex intervals $C$ is set to the interval spanning $T_{in}$.
-Then, the complexity ($c$) of $T_{in}$ is evaluated in all points of $T_{in}$.
-The complexity $c(x)$ in point $x$ is defined as (see Figure~\ref{fig:complexity}):
-\begin{equation}
-  c(x) = \sum_{(u, v) \in N(T, x, \nu)}{(|u| + |v|)^2 \alpha(u, v)}, % \mathrm{acos}(\frac{u \cdot v}{|u| \cdot |v|})
-\label{eq:complexity}
-\end{equation}
-where $N(T, x, \nu)$ is a set of consecutive tuples of segments of a trajectory $T$ lying in the neighborhood of $x$ and $\alpha(u, v)$ is angle between segments $u$ and $v$.
-The neighborhood of $x$ contains all points $y \in T$ such that $d(x, y) < \nu$ where $d(x, y)$ is distance along $T$.
-We evaluate the complexity of $T$ in a neighborhood of $x$ in order to take into account local shape of the trajectory in the vicinity of $x$.
-Our typical setting for $\nu$ is 2~\angstrom\ which is an experimentally obtained value.
 
 \begin{figure}
 	\includegraphics[width=0.95\linewidth]{img/complexity.pdf}
