--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -1,6 +1,6 @@
-When visualizing the ligand trajectory as is, e.g., using line strip of consecutive ligand positions, the visualization becomes crowded even when analyzing only hundreds of snapshots (see Figure~\ref{fig:crowded}).
-Therefore, we decided to simplify the original trajectory data and to visualize the simplified trajectory.
-In this manner, we enable the user to deduce information about significant ligand movement directly from its 3D visualization.
+When visualizing the ligand trajectory in its original form, e.g., using a line strip of consecutive ligand positions, the visualization becomes very crowded even when analyzing only few hundreds of snapshots (see Figure~\ref{fig:crowded} left).
+Therefore, it is necessary to simplify the original trajectory data and to visualize this simplified version.
+In this manner, we enable the user to deduce the information about significant ligand movements directly from its 3D visualization.
 
 \begin{figure}
 	\includegraphics[width=0.95\linewidth]{img/crowded-combined.png}
@@ -12,13 +12,13 @@ The trajectory is colored by time from beginning (gray) towards its end (orange)
 \end{figure}
 
 We propose two types of ligand trajectory simplification: i) automatic and ii) manual.
-The automatic simplification is applied to the whole original trajectory, while the manual one enables fine user regulated control over the level of simplification of individual parts of the trajectory.
-In fact, the automatic simplification can be viewed as an iterative application of the manual simplification.
+The automatic simplification is applied to the whole original trajectory, while the manual one enables fine user-regulated control over the level of simplification of individual parts of the trajectory.
+%In fact, the automatic simplification can be viewed as an iterative application of the manual simplification.
 %, since its design was aligned with the workflow of a biochemist. - dala by som prec, postradam logicku navaznost
 \subsubsection*{Manual Simplification}
 
-First, we will describe the algorithm of the manual trajectory simplification (see Algorithm~\ref{alg:simplify}).
-The input of the algorithm consist of a trajectory $T_{in}$ and an interval $I$ which denotes a part where the trajectory will be simplified.
+First, we will describe the algorithm for the manual trajectory simplification (see Algorithm~\ref{alg:simplify}).
+The input of the algorithm consist of trajectory $T_{in}$ and interval $I$ which denotes a part where the trajectory should be simplified.
 %a data structure describing the simplification ($S$).
 %More precisely, $S$ is a list of consecutive intervals that span the whole trajectory.
 %Each interval in $S$ is assigned with a simplification level and as such describes amount of simplification of a respective part of $T_{in}$.
@@ -26,24 +26,24 @@ The input of the algorithm consist of a trajectory $T_{in}$ and an interval $I$ 
 As a first step, the algorithm retrieves from a cache the current visualized trajectory $T'$ together with its simplification $S'$.
 Structure $S'$ is a list of consecutive intervals that span the whole trajectory.
 Each interval in $S'$ is assigned with a simplification level and as such describes the amount of simplification of a respective part of $T_{in}$.
-This representation enables simplification of different parts of $T_{in}$ using different level of detail.
-In the next step, updated simplification $S$ is obtained by applying $I$ to $S'$.
+This representation enables the simplification of different parts of $T_{in}$ using different levels of detail.
+In the next step, the updated simplification $S$ is obtained by applying $I$ to $S'$.
 Then, it is decided whether $T'$ can be incrementally updated to obtain $T_{out}$.
 %If so, an interval $\Delta I$ which updates $S'$ to $S$ is obtained and the current visualized trajectory $T'$ is simplified on $\Delta I$ resulting in $T_{out}$.
 This is true when the level of simplification of $T'$ at the updated interval $I$ is lower than the desired level of simplification.
 In this case, the current visualized trajectory $T'$ is simplified on $I$ resulting in $T_{out}$.
 %a difference of $S$ and $S'$ results in a single interval
 Otherwise, the visualized trajectory $T'$ cannot be used and the simplified trajectory has to be computed from scratch using $T_{in}$.
-This case typically emerges when a user decides to lower the amount of simplification of some part of the trajectory.
+This case typically emerges when the user decides to lower the amount of simplification of some part of the trajectory.
 The computation then proceeds as follows.
 A list $\mathcal{L}$ is computed from $S$.
 For each simplification level in $S$, we extract from $S$ a set of all intervals on that level, $L$, and we add $L$ to $\mathcal{L}$.
-Then, we iterate through $\mathcal{L}$ in ascending order by level of simplification.
+Then, we iterate through $\mathcal{L}$ in an ascending order by level of simplification.
 In each iteration, we have a set of intervals $L \in \mathcal{L}$ and we apply the simplification on all $I_L \in L$ to $T_{out}$.
 In both cases, we employ Savitzky-Golay smoothing method~\cite{savitzky1964smoothing} to simplify the trajectory.
-As a last step, we store the simplified trajectory to a cache.
-The caching is employed to primarily improve performance of automatic simplification.
-Moreover, the performance of manual simplification is also enhanced, for example, when the user iteratively simplifies the same part of the trajectory until he/she is satisfied with the result.
+As the last step we store the simplified trajectory to a cache.
+The caching is employed to primarily improve the performance of automatic simplification.
+Moreover, the performance of manual simplification is also enhanced, for example, when the user iteratively simplifies the same part of the trajectory until reaching satisfiable results.
 
 \begin{algorithm}
   \begin{algorithmic}[1]
@@ -76,8 +76,8 @@ Moreover, the performance of manual simplification is also enhanced, for example
 
 \subsubsection*{Automatic Simplification}
 
-The automatic algorithm (see Algorithm~\ref{alg:auto-simplify}) is iterative and it employs the manual simplification in its iterations.
-Furthermore, it is based on an idea to simplify only parts of the trajectory that are still complex.
+The automatic algorithm (see Algorithm~\ref{alg:auto-simplify}) is iterative and in its iterations employs the manual simplification.
+Furthermore, it is based on an idea to simplify only parts of the trajectory that are still too complex.
 The algorithm starts with considering the whole trajectory as complex -- the set of complex intervals $C$ is set to the interval spanning $T_{in}$.
 Then, the complexity ($c$) of $T_{in}$ is evaluated in all points of $T_{in}$.
 The complexity $c(x)$ in point $x$ is defined as (see Figure~\ref{fig:complexity}):
@@ -85,9 +85,9 @@ The complexity $c(x)$ in point $x$ is defined as (see Figure~\ref{fig:complexity
   c(x) = \sum_{(u, v) \in N(T, x, \nu)}{(|u| + |v|)^2 \alpha(u, v)}, % \mathrm{acos}(\frac{u \cdot v}{|u| \cdot |v|})
 \label{eq:complexity}
 \end{equation}
-where $N(T, x, \nu)$ is a set of consecutive tuples of segments of a trajectory $T$ lying in the neighborhood of $x$ and $\alpha(u, v)$ is angle between segments $u$ and $v$.
-The neighborhood of $x$ contains all points $y \in T$ such that $d(x, y) < \nu$ where $d(x, y)$ is distance along $T$.
-We evaluate the complexity of $T$ in a neighborhood of $x$ in order to take into account local shape of the trajectory in the vicinity of $x$.
+where $N(T, x, \nu)$ is a set of consecutive tuples of segments of a trajectory $T$ lying in the neighborhood of $x$ and $\alpha(u, v)$ is an angle between segments $u$ and $v$.
+The neighborhood of $x$ contains all points $y \in T$ such that $d(x, y) < \nu$ where $d(x, y)$ is the distance along $T$.
+We evaluate the complexity of $T$ in the neighborhood of $x$ in order to take into account the local shape of the trajectory in the vicinity of $x$.
 Our typical setting for $\nu$ is 2~\angstrom\ which is an experimentally obtained value.
 
 \begin{algorithm} [htb]
@@ -124,16 +124,16 @@ Our typical setting for $\nu$ is 2~\angstrom\ which is an experimentally obtaine
 
 \begin{figure}
 	\includegraphics[width=0.95\linewidth]{img/complexity.pdf}
-\caption{Evaluation of complexity of a trajectory $T$ in point $x$.
-The complexity $c(x)$ is contributed to by tuples $(u, v)$ and $(v, w)$, \ie their angles $\alpha$ and $\beta$, as the segments $u$, $v$ and $w$ lie in the neighborhood of $x$ (red).
-The neighborhood of $x$ contains all points that are closer (along $T$) to $x$ then $\nu$.}
+\caption{Evaluation of the complexity of a trajectory $T$ in point $x$.
+The complexity $c(x)$ is determined by tuples $(u, v)$ and $(v, w)$, \ie their angles $\alpha$ and $\beta$, as the segments $u$, $v$, and $w$ lie in the neighborhood of $x$ (red).
+The neighborhood of $x$ contains all points that are closer (along $T$) to $x$ than to $\nu$.}
 \label{fig:complexity}
 \end{figure}
 
-Further, simplification $S$ is set to empty at the beginning and the resulting trajectory $T_{out}$ is set to $T_{in}$.
+Furthermore, the simplification $S$ is set to be empty at the beginning and the resulting trajectory $T_{out}$ is set to $T_{in}$.
 The iterative simplification then proceeds as follows.
 First, a set of simple points $P$ is found by thresholding $c(x)$ by $\tau$.
 All points $p \in P$ are then removed from $C$ which prevents further simplification of parts of the trajectory that are already simple.
 Then, $T_{out}$ is simplified in all complex intervals that remained in $C$.
-After the simplification, the complexity is evaluated again and the improvement to previous complexity is computed.
-The iterative simplification ends when the improvement after an iteration ($\Delta c$) drops below a user specified threshold $\epsilon$.
+After the simplification, the complexity is evaluated again and the improvement in comparison with the previous complexity is computed.
+The iterative simplification ends when the improvement after an iteration ($\Delta c$) drops below a user-specified threshold $\epsilon$.
