Third thing to Feature work

--- a/BioVis/BioVis_BMC_template/parts/conclusion.tex
+++ b/BioVis/BioVis_BMC_template/parts/conclusion.tex
@@ -11,3 +11,4 @@ Finally, the selection and brushing of the ligand attributes is linked among bar
 
 As a future work, we plan to extend the trajectory simplification method to employ caching of simplified trajectory also when the user decreases the simplicity of some part of the simplified trajectory.
 Although, we did not observe in our experiments any chemically irrelevant behaviour when simplifying the trajectory, we plan to employ the information about void space described by tunnels to ensure that the simplified trajectory passes through the void space.
+Last but not least, we plan to redesign the distance ligand attribute such that the ligand distance to the active is computed along the void path to the active site.
