Addressed comments 7, 13 and 14

--- a/BioVis/BioVis_BMC_template/parts/conclusion.tex
+++ b/BioVis/BioVis_BMC_template/parts/conclusion.tex
@@ -4,7 +4,7 @@ First, the overview visualization along with the bar chart view helps to navigat
 Second, the process of understanding the ligand behavior is further supported by the scatterplot matrix.
 The scatterplot matrix enables to explore different attributes of the ligand trajectory.
 Additionally, the biochemists can further explore the spatial representation of the ligand trajectory using the 3D view.
-The visual analysis of the ligand movement in the 3D view is enhanced by employing automatic and/or manual simplifications of the trajectory.
+The visual analysis of the ligand movement in the 3D view is enhanced by employing automatic and/or interactive simplifications of the trajectory.
 
 In the future we plan to extend the trajectory simplification method and employ a caching of the simplified trajectory also when the user decreases the level of simplicity of a selected part of the already simplified trajectory.
 Although we did not observe in our experiments any chemically irrelevant behavior when simplifying the trajectory, we plan to employ the information about computed tunnels to ensure that the simplified trajectory still passes through the void space.
