--- a/BioVis/BioVis_BMC_template/bmc_article.bib
+++ b/BioVis/BioVis_BMC_template/bmc_article.bib
@@ -265,3 +265,14 @@ ISSN={1077-2626},
   year={1964},
   publisher={ACS Publications}
 }
+
+@inproceedings{visvalingam1990douglas,
+  title={The {D}ouglas-{P}eucker Algorithm for Line Simplification: Re-evaluation through Visualization},
+  author={Visvalingam, Mahes and Whyatt, J Duncan},
+  booktitle={Computer Graphics Forum},
+  volume={9},
+  number={3},
+  pages={213--225},
+  year={1990},
+  organization={Wiley Online Library}
+}
