Images 5 and 15 fixed

--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -123,7 +123,8 @@ Our typical setting for $\nu$ is 2~\angstrom\ which is an experimentally obtaine
 \end{algorithm}
 
 \begin{figure}
-	\includegraphics[width=0.95\linewidth]{img/complexity.png}
+	%\includegraphics[width=0.95\linewidth]{img/complexity.png}
+	\includegraphics[width=0.95\linewidth]{img/complexity.pdf}
 \caption{Evaluation of the complexity of a trajectory $T$ in point $x$.
 The complexity $c(x)$ is determined by tuples $(u, v)$ and $(v, w)$, \ie their angles $\alpha$ and $\beta$, as the segments $u$, $v$, and $w$ lie in the neighborhood of $x$ (red).
 The neighborhood of $x$ contains all points that are closer (along $T$) to $x$ than to $\nu$.}
