--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -139,7 +139,7 @@ Then, $T_{out}$ is simplified in all complex intervals that remained in $C$.
 After the simplification, the complexity is evaluated again and the improvement in comparison with the previous complexity is computed.
 The iterative simplification ends when the improvement after an iteration $\Delta c$ drops below a user-specified threshold $\epsilon$.
 
-To address the correctness issue, which is raised by trajectory smoothing, we provide the user also with non-smoothing simplification using the Douglas-Peucker algorithm~\cite{visvalingam1990douglas} which preserves original positions.
+To address the correctness issue, which is raised by the trajectory smoothing, we provide the user also with non-smoothing simplification using the Douglas-Peucker algorithm~\cite{visvalingam1990douglas} which preserves original positions.
 Generally, the non-smoothing simplification employs schemes presented in Algorithms~\ref{alg:simplify}~and~\ref{alg:auto-simplify}.
 Only small modifications to the simplification data structure ($S$) and a new complexity measure $c_{DP}(x)$ were needed due to the nature of the Douglas-Peucker algorithm which keeps only a subset of its input positions.
 We present only the new complexity measure since the other changes are trivial.
@@ -150,4 +150,4 @@ The complexity $c_{DP}(x)$ is defined as:
 \end{equation}
 where $N_{DP}(T, x, \nu)$ is a set of trajectory segments in the neighborhood of $x$ (see Equation~\ref{eq:complexity}), and $P_s$ and $P_e$ are start and end points in that neighborhood.
 Both simplification approaches were evaluated by the domain experts.
-They concluded that, although the smoothing simplification is superior in the ability to provide results that are easy to understand using visualization, it is important for them to use the non-smoothing simplification to confirm their assumptions that were made using the smoothing variant.
+They concluded that, although the smoothing simplification is superior thanks to the ability to provide results that are easy to understand using visualization, it is also important for them to use the non-smoothing simplification to confirm their assumptions that were made when visualizing the smoothed variant.
